--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
     <hr>
     <img src="Google Logo.jpg" style="width:200px;height:200px">
     <hr>
-    <a href="http://www.google.com/" target="_blank">This is google</a>
+    <a href="http://www.google.com/" target="_blank" style="color:green; text-decoration: none;">This is google</a>
 </body>
 </html>
