--- a/table.html
+++ b/table.html
@@ -17,7 +17,7 @@
 <h1>Ray's timetable</h1>
     <table>
         <tr>
-            <td></td>
+            <td>time</td>
             <th>Monday</th>
             <th>Tuesday</th>
             <th>Wednesday</th>
