--- a/table.html
+++ b/table.html
@@ -52,10 +52,10 @@
         <tr>
             <td>Period 4</td>
             <td class="Met">Math Methods</td>
-            <td class="Phy">Pre Physics</td>
-            <td class="empt"></td>
+            <td class="Phy">Pre Physics</td>    
+            <td class="empt">empt</td>
             <td class="Chem">Pre Chemistry</td>
-            <td class="empt"></td>
+            <td class="empt">empt</td>
         </tr>
 
     </table>
