--- a/table.html
+++ b/table.html
@@ -53,9 +53,9 @@
             <td>Period 4</td>
             <td class="Met">Math Methods</td>
             <td class="Phy">Pre Physics</td>    
-            <td class="empt">empt</td>
+            <td class="empt"></td>
             <td class="Chem">Pre Chemistry</td>
-            <td class="empt">empt</td>
+            <td class="Empt"></td>
         </tr>
 
     </table>
