--- a/table.html
+++ b/table.html
@@ -8,7 +8,7 @@
     <style>.Phy{background-color: yellow;}</style>
     <style>.Met{background-color: lightskyblue;}</style>
     <style>.Eng{background-color: aqua;}</style>
-    <style>.empt{background-color: black;}</style>
+    <style>.Empt{background-color: black;}</style>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -53,9 +53,9 @@
             <td>Period 4</td>
             <td class="Met">Math Methods</td>
             <td class="Phy">Pre Physics</td>    
-            <td class="empt">fewa</td>
+            <td class="Empt"></td>
             <td class="Chem">Pre Chemistry</td>
-            <td class="Empt">fewa</td>
+            <td class="Empt"></td>
         </tr>
 
     </table>
