--- a/combination.html
+++ b/combination.html
@@ -78,6 +78,27 @@
 
 
 
+    <p style="font-size: 150%;">This is bigger</p>
+    <p style="font-style: arial;">This is bigger</p>
+    <p style="font-size: 150%;">This is bigger</p>
+    <p style="font-size: 150%;">This is bigger</p>
+
+
+
+
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+
+
+
     <h1>order list</h1>
     <ol style="color:royalblue">English</ol>
     <ol style="color:red">Math</ol>
