--- a/combination.html
+++ b/combination.html
@@ -81,9 +81,13 @@
     <h1 style="font-size: 150%; background-color: aqua;">This is bigger</h1>
     <h2 style="font-family: Arial, Helvetica, sans-serif;">This is arial</h2>
     <h3 style="text-align: center;">This is centered</h3>
+
     <p style="color: gray;">This is gray</p>
     <p style="font-family: Arial, Helvetica, sans-serif;">This is arial</p>
     <p style="font-size: 20px;">This is 20 px</p>
+    
+    <a style="text-decoration: none;" href="http://www.google.com" target="_blank">This is google</a><br>
+    <a href="http://www.google.com" target="_blank">This is google</a>
 
 
 
