--- a/index.html
+++ b/index.html
@@ -15,8 +15,15 @@
 </head>
 <body style="background-color: rgba(255, 255, 0, 0.203) ;">
 
-    <h1 style="text-align: center;">This is all about animals</h1>
-
+    <h1 style="text-align: center; font-family: Verdana, Geneva, Tahoma, sans-serif;">This is all about animals</h1>
+    <p style="font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">Kangaroos are the world's largest marsupials. 
+        A Red Kangaroo can weigh 90kg and can grow two
+         metres tall. Black Wallaroos, at around 20kg,
+          are the smallest species (their name a 
+          portmanteau of wallaby and kangaroo). 
+          Kangaroos are famous for hopping and can 
+          reach speeds of 60kph, clearing more than 
+          8m in a single bound!-Bush Heritage Australia</p>
 
 
     <style>
