--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </style>
         
         <ul>
-            <li><a href="index.html">index</a></li>
+            <li><a href="http://127.0.0.1:5500/RayZhong2023.github.io/index.html">index</a></li>
             <li><a href="gallery.html">gallery</a></li>
         </ul>
     
