--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
     </style>
         
         <ul>
-            <li><a href="http://127.0.0.1:5500/RayZhong2023.github.io/index.html">index</a></li>
-            <li><a href="gallery.html">gallery</a></li>
+            <li><a href="http://127.0.0.1:5500/RayZhong2023.github.io/index.html">to the index</a></li>
+            <li><a href="http://127.0.0.1:5500/gallery.html">to the gallery</a></li>
         </ul>
     
 </body>
