--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
         
         <ul>
             <li><a href="http://127.0.0.1:5500/gallery.html">to the gallery</a></li>
+            <li><a href="http://127.0.0.1:5500/RayZhong2023.github.io/index.html">to the index</a></li>
         </ul>
     
 </body>
