--- a/gallery.html
+++ b/gallery.html
@@ -33,8 +33,8 @@
     </style>
         
  <ul>
-    <li><a href="index.html">to the index</a></li>
-    <li><a href="gallery.html">to the gallery</a></li>
+    <li><a href="https://rayzhong2023.github.io/index.html">to the index</a></li>
+    <li><a href="https://rayzhong2023.github.io/gallery.html">to the gallery</a></li>
 </ul>
 
 <style>
@@ -58,31 +58,32 @@
         </tr>
         <tr>
             <td></td>
-            <td><img src="s1.jpg"></td>
-            <td><img src="sm1.jpg"></td>
-            <td><img src="a1.jpg"></td>
-            <td><img src="w1.jpg"></td>
+            <td></td>
+            <td><img src="https://rayzhong2023.github.io/s1.jpg"></td>
+            <td><img src="https://rayzhong2023.github.io/sm1.jpg"></td>
+            <td><img src="https://rayzhong2023.github.io/a1.jpg"></td>
+            <td><img src="https://rayzhong2023.github.io/w1.jpg"></td>
         </tr>
         <tr>
             <td></td>
-            <td><img src="s2.jpg"></td>
-            <td><img src="sm2.jpg"></td>
-            <td><img src="a2.jpg"></td>
-            <td><img src="w2.jpg"></td>
+            <td><img src="https://rayzhong2023.github.io/s2.jpg"></td>
+            <td><img src="https://rayzhong2023.github.io/sm2.jpg"></td>
+            <td><img src="https://rayzhong2023.github.io/a2.jpg"></td>
+            <td><img src="https://rayzhong2023.github.io/w2.jpg"></td>
         </tr>
         <tr>
             <td></td>
-            <td><img src="s3.jpg"></td>
-            <td><img src="sm3.jpg"></td>
-            <td><img src="a3.jpg"></td>
-            <td><img src="w3.jpg"></td>
+            <td><img src="https://rayzhong2023.github.io/s3.jpg"></td>
+            <td><img src="https://rayzhong2023.github.io/sm3.jpg"></td>
+            <td><img src="https://rayzhong2023.github.io/a3.jpg"></td>
+            <td><img src="https://rayzhong2023.github.io/w3.jpg"></td>
         </tr>
         <tr>
             <td></td>
-            <td><img src="s4.jpg"></td>
-            <td><img src="sm4.jpg"></td>
-            <td><img src="a4.jpg"></td>
-            <td><img src="w4.jpg"></td>
+            <td><img src="https://rayzhong2023.github.io/s4.jpg"></td>
+            <td><img src="https://rayzhong2023.github.io/sm4.jpg"></td>
+            <td><img src="https://rayzhong2023.github.io/a4.jpg"></td>
+            <td><img src="https://rayzhong2023.github.io/w4.jpg"></td>
         </tr>
     </table>
     
