--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
     </style>
         
         <ul>
-            <li><a href="index.html">to the index</a></li>
-            <li><a href="gallery.html">to the gallery</a></li>
+            <li><a href="https://rayzhong2023.github.io/index.html">to the index</a></li>
+            <li><a href="https://rayzhong2023.github.io/gallery.html">to the gallery</a></li>
         </ul>
     
 </body>
