--- a/gallery.html
+++ b/gallery.html
@@ -33,10 +33,10 @@
     </style>
         
  <ul>
-    <li><a href="https://rayzhong2023.github.io/index.html">to the index</a></li>
-    <li><a href="https://rayzhong2023.github.io/gallery.html">to the gallery</a></li>
+    <li><a href="https://RayZhong2023.github.io/index.html">to the index</a></li>
+    <li><a href="http://RayZhong2023.github.io/gallery.html">to the gallery</a></li>
 </ul>
-
+    
 <style>
 
 .table, th, td {
