--- a/combination.html
+++ b/combination.html
@@ -9,6 +9,44 @@
 <body>
 
 
+    <style>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    </style>
+    
+
+
+
+
+
+
+
+
+    
+
 
     <h1>This is my first heading</h1>
     <p style="color: blue;">This is my first paragraph</p>
